--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "projeto15-boardcamp",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
+    "joi": "^17.6.0",
     "pg": "^8.7.3"
+  },
+  "scripts": {
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
